2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2004-02-01  Johannes-Heinrich Vogeler <vogeler@sourceforge.net>

        * fixed bug 860753 (plain justification does not work with
          hyphenation). Modified ::textutil::adjust::Justification

2003-08-06  Andreas Kupries  <andreask@activestate.com>

        * expander.tcl (Op_expand): Fixed SF tcllib bug 781973 ... Do not
          throw a regular error. Using HandleError now to give the user
          control of the situation, via the defined error mode.

        * pkgIndex.tcl: Expander bumped to version 1.2.1 for this
          bugfix. Do not bump the version again when doing minor
          bugfixes. Only bigger bugfixes and major changes warrant a bump
          before the next release.

2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

        *
        * Released and tagged Tcllib 1.4 ========================
        *

2003-05-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

        * split.tcl: Use the old non -start using version for < 8.3
        * expander.tcl: Avoid use of [array unset] for Tcl 8.2 compat.

2003-04-10  Andreas Kupries  <andreask@activestate.com>

        * pkgIndex.tcl:
        * expander.man:
        * expander.tcl: Set version of the package to to 1.2

        * pkgIndex.tcl:
        * textutil.man:
        * textutil.tcl: Fixed bug #614591. Set version
          of the package to to 0.5

2003-03-31  Andreas Kupries  <andreask@activestate.com>

        * tabify.tcl (tabify, untabify): Changed from regsub to string map
          This closes FR #693194 by David Welton
          <davidw@users.sourceforge.net>.

2003-03-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

        * expander.man:
        * expander.tcl: Added method 'ctopandclear' to retrieve data
          captured in the current context without having to pop the