@@ -101,4 +101,22 @@ Bolivia)}
 
 ##########
 
+test adjust-tex-sf-860753 {German hyphenation with plain justification} {
+
+    set str { ein test strin ein
+test string ein test string ein test string ein test
+string ein test string ein test string ein test
+string ein test string ein test string ein test
+string ein test string ein test string ein test
+string ein test string ein test string ein test
+string ein test string g ein test string
+}
+    textutil::adjust::readPatterns [file join $::tcltest::testsDirectory "dehypht.tex"]
+    textutil::adjust $str -length 76 -hyphenate 1 -strictlength 1 -justify plain
+} {ein  test strin  ein test string  ein test string  ein test string  ein test
+string  ein test string  ein test string ein test string ein test string ein
+test string  ein test string ein test string ein test string ein test string
+ein test string ein test string ein test string ein test string   g ein test
+string}
+
 ::tcltest::cleanupTests
