@@ -1,3 +1,10 @@
+2004-03-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* adjust_hyph.test: Added the example of [Tcllib SF Bug 860753] as
+	  a testcase to textutil. Using tcllib 1.4 the new test
+	  fails. Using the CVS Head (== Tcllib 1.6) the reported problem
+	  could not be reproduced. IOW this problem has been fixed already.
+
 2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
